--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Hasibul Islam</title>
+    <link rel="shortcut icon" href="https://lh3.googleusercontent.com/ogw/AF2bZyhWfis0DZd26z6rqOz4VFQ7kbj5DsRW7NBD9BKYvDYeQQ=s32-c-mo" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
